Ya veo el perfil
Ya conectado, pero sin poder obtener la rta del generateRequest()

--- a/src/tpjsbbva-app/tpjsbbva-app.html
+++ b/src/tpjsbbva-app/tpjsbbva-app.html
@@ -7,9 +7,10 @@
       :host {
         display: block;
       }
+      
     </style>
 
-    <wc-login mensajeinicial="[[is]]Ninja Perfil Preview... (click)"></wc-login>
+    <wc-login id="login" mensajeinicial="[[is]]Ninja Perfil Preview... (click)"></wc-login>
     
   </template>
 
