Conexión a API y recupero de datos iniciales - OK
Ya me conecto a API CodeWars y traigo los datos del nick con el que me logueo.
Libre de Errores!!!!

--- a/src/tpjsbbva-app/tpjsbbva-app.html
+++ b/src/tpjsbbva-app/tpjsbbva-app.html
@@ -32,27 +32,27 @@
 
       constructor() {
         super();
-        console.log('construyo el webcomponente tpjsbbva-pelado.html');
+        //console.log('construyo el webcomponente tpjsbbva-pelado.html');
       }
 
       connectedCallback() {
         super.connectedCallback();
-        console.log('paso por el connectedCallback() del webcomponente tpjsbbva-pelado.html');
+        //console.log('paso por el connectedCallback() del webcomponente tpjsbbva-pelado.html');
       }
 
       disconnectedCallback() {
         super.disconnectedCallback();
-        console.log('paso por el disconnectedCallback() del webcomponente tpjsbbva-pelado.html');
+        //console.log('paso por el disconnectedCallback() del webcomponente tpjsbbva-pelado.html');
       }
 
       attributeChangedCallback(nombre, valorAnterior, valorNuevo) {
         super.attributeChangedCallback();
-        console.log('Ejecutándose attributeChangedCallback del webcomponente tpjsbbva-pelado.html ', nombre, valorAnterior, valorNuevo);
+        //console.log('Ejecutándose attributeChangedCallback del webcomponente tpjsbbva-pelado.html ', nombre, valorAnterior, valorNuevo);
       }
       
       ready() {
         super.ready();
-        console.log('Ejecutándose ready del webcomponent tpjsbbva-pelado.html');
+        //console.log('Ejecutándose ready del webcomponent tpjsbbva-pelado.html');
       }    
       
     }
