--- a/src/wc-login/wc-login-style.html
+++ b/src/wc-login/wc-login-style.html
@@ -51,6 +51,7 @@
             paper-button.indigo {
                 background-color: var(--paper-indigo-400);
                 color: white;
+                border-radius: 10px;
 
                 --paper-button-raised-keyboard-focus: {
                     background-color: var(--paper-pink-a200) !important;
