Versión Final - 20190116 - 00:59hs
Versión Final cerrada el 16/01/2019 a las 00:59hs

--- a/src/perfil-ninja/perfil-ninja.html
+++ b/src/perfil-ninja/perfil-ninja.html
@@ -1,3 +1,4 @@
+<!-- Leandro Echevarria - A125989 -->
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../perfil-ninja/perfil-ninja-style.html">
 <link rel="import" href="../perfil-ninja/perfil-ninja-katas.html">
