--- a/src/wc-login/wc-login.html
+++ b/src/wc-login/wc-login.html
@@ -1,3 +1,4 @@
+<!-- Leandro Echevarria - A125989 -->
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
